<resources>
    <string name="app_name">Ascent</string>
    <string name="skip">Skip</string>
    <string name="okay">Okay</string>
    <string name="welcome_to_ascent">Welcome to Ascent</string>
    <string name="desc_welcome">Here you can monitor your weight and activities</string>
    <string name="friends">Friends</string>
    <string name="desc_friends">Fill in the activity and weight fields, and then share the information with your friends</string>
    <string name="activities">Activities</string>
    <string name="desc_activities">Convenient weight and activity tracking system-fill out your profile and start living brightly</string>
    <string name="already_a_member">Already a member</string>
    <string name="continue_with_strava">Continue with Strava</string>
    <string name="auth_canceled">Authorization cancelled</string>
    <string name="refresh">Refresh</string>
    <string name="test_name">Test Name</string>
    <string name="test_mail">/@test</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="_109">109</string>
    <string name="share">Share</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="country">Country</string>
    <string name="russia">Russia</string>
    <string name="weight_edit">Weight (edit)</string>
    <string name="logout">Logout</string>
    <string name="list">List</string>
    <string name="home">Home</string>
    <string name="create_activity">Create a new activity</string>
    <string name="name">Name</string>x
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="timeMin">Time, min</string>
    <string name="distance">Distance</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="run_1">Run 1</string>
    <string name="_0_km">0 km</string>
    <string name="elevation_gain">Elevation Gain</string>
    <string name="long_distance_running">long distance running</string>
    <string name="the_best_app_for_cyclists_and_runners">The best app for cyclists and runners!</string>
    <string name="add_new_activity">Add new activity</string>
    <string name="loaded_from_cash">"     Loaded feed from cache"</string>
    <string name="activities_not_found">Activities not found</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="logout_question">Are you sure you want to logout? All local data will be deleted.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="exit_question">Exit?</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="training_time">Training time!</string>
    <string name="notify_text">It\'s a great time to resume your workouts</string>
    <string name="allow">Allow</string>
    <string name="allow_use">Allow Ascent to use your contacts</string>
    <string name="contact_list_is_empty">Contact list is empty</string>
    <string name="error_permission">Error: Ascent does not have access to your contacts</string>
    <string name="url_strava_profile">Я уже в Strava : https://www.strava.com/athletes/93933617</string>
    <string name="retry_snackbar_text">Error: Ascent could not load feed. Retry.</string>
    <string name="profile">Profile</string>
    <string name="enter_name">You need enter a name.</string>
    <string name="choice_date">You need choice a date.</string>
    <string name="enter_time">You need enter a time.</string>
    <string name="enter_distance">You need enter a distance.</string>
</resources>