<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textHeadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="47dp"
                android:text="@string/create_activity"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editName"
                style="@style/inputTextAddActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textHeadline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerType"
                style="@style/spinner"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                app:endIconDrawable="@drawable/ic_arrow_dropdown"
                app:endIconTint="@color/dark_gray"
                app:layout_constraintEnd_toEndOf="@id/editName"
                app:layout_constraintStart_toStartOf="@id/editName"
                app:layout_constraintTop_toBottomOf="@id/editName" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editDate"
                style="@style/inputTextAddActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerType">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTime"
                style="@style/inputTextAddActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/timeMin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editDate">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTimeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editDistance"
                style="@style/inputTextAddActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/distance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTime">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDistanceInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editDescription"
                style="@style/inputTextAddActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editDistance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDescriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="40dp"
                android:text="@string/add"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>