<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageAscent"
        android:layout_width="181dp"
        android:layout_height="50dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="54dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_onboarding_ascent" />

    <Button
        android:id="@+id/textButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="13sp"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintTop_toTopOf="@id/imageAscent"
        app:layout_constraintBottom_toBottomOf="@id/imageAscent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageWelcome"
        android:layout_width="340dp"
        android:layout_height="288dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="71dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageAscent"
        app:srcCompat="@drawable/ic_onboarding_welcome" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="@string/welcome_to_ascent"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageWelcome"
        app:layout_constraintStart_toStartOf="@+id/imageWelcome"
        app:layout_constraintTop_toBottomOf="@+id/imageWelcome" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="50dp"
        android:text="@string/desc_welcome"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="@+id/textHeadline"
        app:layout_constraintStart_toStartOf="@+id/textHeadline"
        app:layout_constraintTop_toBottomOf="@+id/textHeadline"/>

</androidx.constraintlayout.widget.ConstraintLayout>